[package]
name = "access_log_parser"
version = "0.3.0"
authors = ["Daniel Mikusa <dmikusa@pivotal.io>"]
edition = "2018"
description = "A library of Rust parsers for reading access logs in a strongly-typed way"
repository = "https://github.com/dmikusa-pivotal/access_log_parser"
readme = "README.md"
license = "Apache-2.0"
keywords = ["access", "logs", "parse"]
categories = ["parsing", "parser-implementations"]

[dependencies]
nom = "^4.0"
chrono = "^0.4"
http = "^0.1"
