[package]
name = "access_log_parser"
version = "0.7.0"
authors = ["Daniel Mikusa <dmikusa@vmware.com>"]
edition = "2018"
description = "A library of Rust parsers for reading access logs in a strongly-typed way"
repository = "https://github.com/dmikusa-pivotal/access_log_parser"
readme = "README.md"
license = "Apache-2.0"
keywords = ["access", "logs", "parse"]
categories = ["parsing", "parser-implementations"]

[dependencies]
nom = "7.1"
http = "0.2"
thiserror = "1.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]