[package]
name = "access_log_parser"
version = "0.11.0"
authors = ["Daniel Mikusa <dan@mikusa.com>"]
edition = "2018"
description = "A library of Rust parsers for reading access logs in a strongly-typed way"
repository = "https://github.com/dmikusa-pivotal/access_log_parser"
readme = "README.md"
license = "Apache-2.0"
keywords = ["access", "logs", "parse"]
categories = ["parsing", "parser-implementations"]

[dependencies]
nom = "8"
nom-language = "0.1.0"
http = "1"
thiserror = "2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]

[[example]]
name = "parse_line"
path = "examples/parse_line.rs"
